# restaurant

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
migration/: env.py  script.py.mako
migration/versions/: 4430a26303be_.py  46d8df49582a_.py  ce749835cd2b_.py  e220ff2a0047_.py  fcea042f0718_initial1.py
src/: main.py
src/project/api/: auth_routes.py  client_routes.py  delivery_routes.py  depends.py  dish_products_routes.py  dish_routes.py  drink_routes.py  healthcheck.py  order_routes.py  ordered_dish_routes.py  ordered_drink_routes.py  price_routes.py  product_in_delivery_routes.py  product_routes.py  routes.py  shelf_life_routes.py  staff_routes.py  supplier_routes.py  table_routes.py
src/project/core/: config.py  exceptions.py
src/project/infrastructure/postgres/: database.py  models.py
src/project/infrastructure/postgres/repository/: client_repo.py  delivery_repo.py  dishProducts_repo.py  dish_repo.py  drink_repo.py  order_repo.py  orderedDish_repo.py  orderedDrink_repo.py  price_repo.py  productInDelivery_repo.py  product_repo.py  shelfLife_repo.py  staff_repo.py  supplier_repo.py  table_repo.py  user_repo.py
src/project/resource/: auth.py
src/project/schemas/: auth.py  healthcheck.py  user.py
